mapper, config 추가 등 몇 가지 수정